--- a/style.css
+++ b/style.css
@@ -1,3 +1,13 @@
+*¨{
+    margin: 0px;
+    padding: 0px;
+}
+
+body{
+background-color: blueviolet;
+font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
 footer {
     display: grid;
     text-align: center;
