--- a/style.css
+++ b/style.css
@@ -1,69 +1,94 @@
-*¨ {
+* {
     margin: 0px;
     padding: 0px;
-
 }
 
 body {
-    background-color: rgb(255, 149, 19);
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    border: 50px;
-    border-left: 30%;
-    border-right: 30px;
+    
+    width: 100%;
+    height: 100vh;
+    font-family: 'Courier New', Courier, monospace;
+    color: white;
 }
 
 header {
-    display: flex;
-
-}
-
-header h1 {
-    background-color: rgb(16, 137, 243);
-    color: white;
-    font-family: 'Times New Roman', Times, serif;
-    font-size: 25px;
-    height: 25px;
+    background: url(Imagenes/fondo\ breakfasts.jpg)center center/cover no-repeat;
+    color: rgb(245, 164, 15);
+    height: 100px;
     width: 100%;
     text-align: center;
-    border-top: 15px solid rgb(255, 236, 24);
-    border-bottom: 15px solid rgb(255, 5, 5);
-
+    line-height: 100px;
+    border: 2px solid #ffffff;
+    font-size: 30px;
 }
-
-/* .right{
-background-color: rgb(16, 137, 243);
-color: white;
-font-family: 'Times New Roman', Times, serif;
-font-size: 25px;
-height: 25px;
-width: 100%;
-text-align: center;
-border-top: 15px solid rgb(255, 236, 24);
-border-bottom: 15px solid rgb(255, 5, 5);
-} */
 
 #container {
-    /* background-color: brown; */
-    width: 100%;
+    width: 90%;
     margin: 0px auto;
-    text-align: center
 }
+
+.container-food {
+    /* display: flex;
+    justify-content: space-around; */
+    /* text-align: center; */
+    background: linear-gradient(to right, rgb(255, 238, 4), rgb(21, 95, 244), rgb(224, 3, 3));
+    margin-top: 15px;
+    margin-bottom: 15px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    border-bottom: 4px solid rgb(229, 39, 39);
+    border-top: 4px solid rgb(229, 39, 39);
+    border-left: 4px solid rgb(34, 121, 244);
+    border-right: 4px solid rgb(34, 121, 244);
+    border-style: ridge;
+    border-radius: 15px;
+}
+
+ul{
+text-align: center;
+}
+
+a {
+    color: hsl(0, 0%, 100%);
+}
+
+.content {
+    float: left;
+    width: calc(80% - 80px);
+    padding: 20px;
+    text-align: center;
+}
+
+.article {
+    color: rgb(0, 0, 0);
+    margin-top: 25px;
+    margin-bottom: 20px;
+    padding-bottom: 15px;
+    border-bottom: 1px solid rgb(0, 0, 0);
+}
+
+
+aside {
+    color: #fb9313;
+    float: left;
+    width: calc(20% - 20px);
+    min-height: 2000px;
+    background: url(Imagenes/fondo-aside.jpg);
+    /* background-color: rgb(212, 211, 211); */
+    padding: 10px;
+}
+
 
 footer {
-    display: grid;
+    background-color: black;
     text-align: center;
-    background-color: rgb(145, 145, 224);
+    height: 30px;
+    line-height: 30px;
+    clear: both;
 }
 
-.footertwo {
-    background-color: rgb(255, 255, 255);
-    color: rgb(0, 0, 0);
-    font-family: 'Times New Roman', Times, serif;
-    font-size: 25px;
-}
-
-#company {
-    color: white;
-    font-family: 'Times New Roman', Times, serif;
-    font-size: 25px;
-}
+/* .background {
+    background: linear-gradient(to right, rgb(255, 231, 12), rgb(21, 95, 244), rgb(224, 3, 3));
+    width: 100%;
+    height: 100vh;
+  } */
