--- a/views/recipe.html
+++ b/views/recipe.html
@@ -5,7 +5,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Recipes</title>
-    <link rel="stylesheet" href="recipe.css">
 </head>
 
 <body>
@@ -16,9 +15,8 @@
 
         <section class="content">
 
-            <h1>RECIPES</h1>
+            <h2 id="tittle-recipes">RECIPES:</h2>
     
-
             <article class="article">
                 <img src="Imagenes/Arepas.webp" width="400px">
                 <h2>Arepa</h2>
@@ -26,9 +24,9 @@
                     href="https://www.recetasderechupete.com/arepas-venezolanas-con-relleno-la-reina-pepiada/8351/">Recipe</a>
                 <h4>Ingredients:</h4>
                 <ul>
-                    <ol>300 ml. de agua tibia.</ol>
-                    <ol>220 g. de harina de maíz precocida P.A.N. o similar</ol>
-                    <ol>1/2 cucharada de postre de sal (4 gramos)</ol>
+                    <ol>300 ml. of warm water..</ol>
+                    <ol>220 g. of P.A.N. or similar precooked corn flour</ol>
+                    <ol>1/2 dessert spoonful of salt (4 grams)</ol>
                 </ul>
             </article>
 
@@ -38,13 +36,14 @@
                 <a href="https://www.laylita.com/recetas/pisca-andina/">Recipe</a>
                 <h4>Ingredients:</h4>
                 <ul>
-                    <ol>4 tazas de leche líquida ó 1L.</ol>
-                    <ol>4 cucharadas de mantequilla con sal (de ser posible use mantequilla, no margarina).</ol>
-                    <ol>3 tallos de cebollín 150 g.</ol>
-                    <ol>4 papas medianas 400 g.</ol>
-                    <ol>1 ramillete de cilantro.</ol>
-                    <ol>250 g. de queso blanco la receta original se hace con queso blanco ahumado.</ol>
-                    <ol>4 huevos Sal al gusto.</ol>
+                    <ol>4 cups of liquid milk or 1L.</ol>
+                    <ol>4 tablespoons salted butter (use butter if possible, not margarine).</ol>
+                    <ol>3 scallion stalks 150 g.</ol>
+                    <ol>4 medium potatoes 400 g.</ol>
+                    <ol>1 coriander bouquet.</ol>
+                    <ol>250 g. of white cheese, the original recipe is made with smoked white cheese.</ol>
+                    <ol>4 eggs.</ol>
+                    <ol>Salt to taste.</ol>
 
                 </ul>
             </article>
@@ -55,13 +54,13 @@
                 <a href="https://www.recetavenezolana.com/panquecas/">Recipe</a>
                 <h4>Ingredients:</h4>
                 <ul>
-                    <ol>1 taza de harina de trigo.</ol>
-                    <ol>2 huevos.</ol>
+                    <ol>1 cup wheat flour.</ol>
+                    <ol>2 eggs.</ol>
                     <ol>2 tazas de leche líquida.</ol>
-                    <ol>½ taza de mantequilla líquida.</ol>
-                    <ol>2 cucharadas de azúcar.</ol>
-                    <ol>½ taza de aceite.</ol>
-                    <ol>300 g de queso rallado.</ol>
+                    <ol>½ cup liquid butter.</ol>
+                    <ol>2 spoonfuls of sugar.</ol>
+                    <ol>½ cup oil..</ol>
+                    <ol>300 g of grated cheese.</ol>
 
                 </ul>
             </article>
@@ -72,14 +71,13 @@
                 <a href="https://www.bonviveur.es/recetas/tequenos">Recipe</a>
                 <h4>Ingredients:</h4>
                 <ul>
-                    <ol>175 g de harina de trigo.</ol>
-                    <ol>30 g de mantequilla fría</ol>
-                    <ol>1 huevo</ol>
-                    <ol>35 g de agua</ol>
-                    <ol>1 pizca de sal</ol>
-                    <ol>200 g de queso blanco tipo llanero (en su defecto gouda) cortados en bastones de 2 cm de ancho y
-                        8 cm de largo</ol>
-                    <ol>500 g de aceite para freír</ol>
+                    <ol>175 g of wheat flour.</ol>
+                    <ol>30 g cold butter.</ol>
+                    <ol>1 egg.</ol>
+                    <ol>35 ml of water.</ol>
+                    <ol>1 pinch of salt.</ol>
+                    <ol>200 g of white cheese type llanero (if not gouda) cut in sticks of 2 cm wide and 8 cm long</ol>
+                    <ol>500 g frying oilr</ol>
                 </ul>
             </article>
 
@@ -90,10 +88,10 @@
                 <a href="https://www.bizcochosysancochos.com/2018/01/empanadas-venezolanas-harina-maiz.html">Recipe</a>
                 <h4>Ingredients:</h4>
                 <ul>
-                    <ol>1 1/2 taza (215 gramos) de harina de maíz precocida</ol>
-                    <ol>2 cucharadas de harina de trigo para todo uso o maicena</ol>
-                    <ol>1/4 cucharadita de sal </ol>
-                    <ol>1 1/2 tazas de agua fría</ol>
+                    <ol>1 1/2 cup (215 grams) precooked corn flour.</ol>
+                    <ol>2 tablespoons all-purpose flour or cornstarch.</ol>
+                    <ol>1/4 teaspoon salt.</ol>
+                    <ol>1 1/2 cups of cold water.</ol>
                 </ul>
             </article>
 
@@ -103,11 +101,11 @@
                 <a href="https://www.196flavors.com/es/pastelitos-venezolanos/">Recipe</a>
                 <h4>Ingredients:</h4>
                 <ul>
-                    <ol>500 g de harina de trigo tamizada</ol>
-                    <ol>250 ml de agua (o más)</ol>
-                    <ol>1 cucharadita de sal</ol>
-                    <ol>1 bolsita de levadura en polvo</ol>
-                    <ol>1 cucharada de aceite vegetal neutro (o margarina derretida)</ol>
+                    <ol>500 g sifted wheat flour.</ol>
+                    <ol>250 ml of water (or more).</ol>
+                    <ol>1 teaspoon salt.</ol>
+                    <ol>1 sachet of baking powder.</ol>
+                    <ol>1 tablespoon neutral vegetable oil (or melted margarine).</ol>
                 </ul>
             </article>
 
@@ -118,15 +116,15 @@
                     ">Recipe</a>
                 <h4>Ingredients:</h4>
                 <ul>
-                    <ol>1 cucharilla de Levadura</ol>
-                    <ol>4 cucharas de Azúcar</ol>
-                    <ol>1 cuchara de Mantequilla</ol>
-                    <ol>2 cucharas de Sal</ol>
-                    <ol>½ kilogramo de Harina </ol>
-                    <ol>2 tazas de Agua</ol>
-                    <ol>1 Papelon</ol>
-                    <ol>Mantequilla derretida</ol>
-                    <ol>Queso rallado</ol>
+                    <ol>1 teaspoon of yeast.</ol>
+                    <ol>4 tablespoons sugar.</ol>
+                    <ol>1 tablespoon butter.</ol>
+                    <ol>2 tablespoons of salt</ol>
+                    <ol>½ kilogram of flour.</ol>
+                    <ol>2 cups of water.</ol>
+                    <ol>1 Papelon.</ol>
+                    <ol>Melted butter.</ol>
+                    <ol>Grated cheese.</ol>
                 </ul>
             </article>
 
@@ -148,6 +146,8 @@
                     <ol>1 cucharadita de sal.</ol>
                 </ul>
             </article>
+
+            <div id="entries-container"></div>
 
         </section>
 
