--- a/views/recipe.html
+++ b/views/recipe.html
@@ -5,11 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Recipes</title>
+    <link rel="stylesheet" href="/recipes.css">
 </head>
 
 <body>
 
-    <div id="content">
+
+
+    <div id="content-recipe">
         
         <br>
 
@@ -155,7 +158,6 @@
             <h1>What are you looking for?</h1>
             <form id="search-form">
                 <input type="text" id="search-input" placeholder="Search...">
-                <!-- <button id="button-search-recipe" onclick="searchRecipe()" type="submit">Search</button> -->
                 <button id="button-search-recipe">Search</button>
             </form>
         </aside>
