--- a/index.css
+++ b/index.css
@@ -11,7 +11,6 @@ html {
 body {
     width: 100%;
     height: 100vh;
-    /* font-family: 'Courier New', Courier, monospace; */
     background-color: #f58f13;
 }
 
@@ -58,6 +57,10 @@ header {
     text-decoration: none;
 }
 
+/* #content-recipe{
+    display:flex;
+} */
+
 .content {
     float: left;
     width: calc(80% - 80px);
@@ -92,22 +95,13 @@ aside {
     padding: 10px;
 }
 
-.container-free {
-    background-color: springgreen;
-    /* height: 1000px;
-    width: 100%; */
-    font-size: 100px;
-    color: rgb(0, 102, 255);
-    bottom: 0;
-}
-
 .footer {
     width: 100%;
     text-align: center;
     line-height: 30px;
     background-color: black;
     color: #ffffff;
-    position: absolute;
+    position: fixed;
     bottom: 0;
 }
 
@@ -117,8 +111,7 @@ aside {
 
 .container-free {
     width: 100%;
-    height: 110px;
-    background-color: #fb9313;
+    height: 20px;
 }
 
 @media(max-width:820px) {
